# installation-guid

./: LICENSE  README.md
dnn_checks/: Dockerfile  Makefile  README.md  pyproject.toml
dnn_checks/dnn_checks/: tf_gpu_check.py
environments/ec2-gpu/: INSTALL.md  README.md
environments/ec2-gpu-ubuntu/: INSTALL.md
environments/ec2-gpu/ec2-instance/: README.md  developers-ec2-infra.yaml
environments/local-gpu-ubuntu/: CLEANUP.md  INSTALL.md
