[tool.poetry]
name = "dnn-checks"
version = "0.1.0"
description = ""
authors = ["dorhar <doron.harnoy@tensorleap.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
tensorflow-io-gcs-filesystem = "0.30.0"
tensorflow = "2.11.0"

[tool.poetry.scripts]
check_tf_gpu='dnn_checks.tf_gpu_check:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
